# n_to_n_proxy

app-sdk/: CMakeLists.txt
app-sdk/proxy/: CMakeLists.txt
app-sdk/proxy/include/: macros.h  nton_proxy.h
app-sdk/proxy/src/: nton_proxy.cpp
app-sdk/test/: CMakeLists.txt  test1.cpp
